typos, colour chapter headings, redo title, cosmetics

--- a/forallx-adl-fol.tex
+++ b/forallx-adl-fol.tex
@@ -66,7 +66,7 @@ The simplest predicates denote properties of individuals. They are things you ca
 		\blank\ was a student of David Lewis\\ 
 		A piano fell on \blank
 	\end{quote}
-In general, you can think about predicates as things which combine with singular terms to make sentences. In these cases, they are interpreted with the aid of natural language \define{verb phrases} like `is a dog' – a syntactic subunit of a sentence including everything but the subject. (But note in the verb phrase `was a student of David Lewis', another proper name appears - we will see how to model such sentences where multiple names interact with a complex predicate below.) Conversely, you can start with sentences and make predicates out of them by removing singular terms. Consider the sentence, `Vinnie borrowed the family car from Nunzio.' By removing a singular term, we can obtain any of three different predicates:
+In general, you can think about predicates as things which combine with singular terms to make sentences. In these cases, they are interpreted with the aid of natural language \define{verb phrases} like `is a dog' – a syntactic subunit of a sentence including everything but the subject. (But note in the verb phrase `was a student of David Lewis', another proper name appears – we will see how to model such sentences where multiple names interact with a complex predicate below.) Conversely, you can start with sentences and make predicates out of them by removing singular terms. Consider the sentence, `Vinnie borrowed the family car from Nunzio.' By removing a singular term, we can obtain any of three different predicates:
 	\begin{quote}
 		\blank\ borrowed the family car from Nunzio\\
 		Vinnie borrowed \blank\ from Nunzio\\
@@ -1324,7 +1324,7 @@ Once we know what atomic formulae are, we can offer recursion clauses to define 
 		\item If \meta{A} is a formula and \meta{x} is a variable, then $\exists\meta{x}\meta{A}$ is a formula.
 		\item Nothing else is a formula.
 	\end {enumerate}
-	} % simplified here to permit e.g. $\forall x (Fx \to \exists x Gx)$ as well-formed - the original definition says that Fx \to \exists x Gx is a formula but its universal closure isn't! 
+	} % simplified here to permit e.g. $\forall x (Fx \to \exists x Gx)$ as well-formed – the original definition says that Fx \to \exists x Gx is a formula but its universal closure isn't! 
 Here are some formulae:
 	\begin{center}
 		$Fx$\\
