--- a/forallx-adl-frontmatter.tex
+++ b/forallx-adl-frontmatter.tex
@@ -5,21 +5,19 @@
 \begin{center}\forallx\ \textsc{adelaide}\end{center}
 \newpage \thispagestyle{empty} ~\\
 \newpage \thispagestyle{empty}
+~\\[2cm]
+\noindent {\color{orange}\resizebox{!}{3em}{\forallx}}
 
-\noindent {\HUGE\color{orange}\forallx}
-
-
-
-\noindent{\large\texttt{Adelaide}}
+\par{\huge\texttt{Adelaide}}
 
 \vfill
 
 
 \noindent {P.D.\ Magnus}\\
-\emph{University at Albany, State University of New York}\\[2cm]
+\emph{University at Albany, State University of New York}\\[1.5cm]
 
 {Tim Button}\\
-\emph{University of Cambridge}\\[2cm]
+\emph{University of Cambridge}\\[1.5cm]
 
 {Antony Eagle}\\
 \emph{University of Adelaide}
@@ -74,7 +72,9 @@ This book has been designed for use in conjunction with the University of Adelai
 \end{itemize}
 I appreciate any comments or corrections: \href{mailto:antony.eagle@adelaide.edu.au}{\nolinkurl{antony.eagle@adelaide.edu.au}}.
 
-\newpage \thispagestyle{empty}\begin{figure} ~\hspace{-0.8cm}{\small
+ \thispagestyle{empty}
+{\begin{figure}
+{\footnotesize
 \begin{tikzpicture}[sibling distance=10em]
  \matrix (depend)
  [
@@ -114,8 +114,8 @@ I appreciate any comments or corrections: \href{mailto:antony.eagle@adelaide.edu
 (depend-10-4) edge (depend-10-5)
 (depend-7-3) edge [looseness=1] (depend-12-4)
 (depend-8-1) edge [looseness=1.2]  (depend-4-4)
-(depend-11-1) edge [out=150,in=188] (depend-4-3)
-    ;
-	\end{tikzpicture}}
-	\caption{How the sections depend on one another. \label{fig:depend}}
+(depend-11-1) edge [out=150,in=188] (depend-4-3);
+	\end{tikzpicture}
+	\caption{How the sections depend on one another. \label{fig:depend}}}
 \end{figure}
+ \thispagestyle{empty}
