--- a/forallx-adl-prooftfl.tex
+++ b/forallx-adl-prooftfl.tex
@@ -537,7 +537,7 @@ There can be as many or as few lines as you like between lines $i$ and $j$. Noti
 	\have{b}{P}\ae{a}
 	\close
 	\have{}{(P\eand P) \eif P}\ci{a-b}
-\end{proof} It might come as no surprise that the conclusion of this proof – being provable from no undischarged assumptions at all - turns out to be a tautology. 
+\end{proof} It might come as no surprise that the conclusion of this proof – being provable from no undischarged assumptions at all – turns out to be a tautology. 
 
 
 It will help to offer a further  illustration of {\eif}I in action. Suppose we want to consider the following:
@@ -821,7 +821,7 @@ Another informative example demonstrates the logical equivalence of `$((P \eand 
 	\close
 	\have{bic}{\bigl((P\eand Q)\eif R)\eiff (P \eif (Q \eif R))\bigr)}\bi{paqr-pqr,ipiqr-c}
 \end{proof}
-Note the small gap between the nested vertical lines between lines 7 and 8 – that shows we have two subproofs here, not one. (That would also be indicated by the fact that the sentence on line 8 has a horizontal line under it – no vertical assumption line has two makers of where the assumptions cease.)
+Note the small gap between the nested vertical lines between lines 7 and 8 – that shows we have two subproofs here, not one. (That would also be indicated by the fact that the sentence on line 8 has a horizontal line under it – no vertical assumption line has two markers of where the assumptions cease.)
 
 
 
@@ -1706,7 +1706,7 @@ Similar demonstrations can be offered explaining how we could derive the third a
 \keyideas{
 	\item Our official system of rules can be augmented by additional rules that are strictly speaking unneccessary – nothing is provable with them that couldn't have been proved without them – but that can nevertheless be used sometimes to speed up proofs.
 	\item Only make use of derived rules when you are told you may do so.
-	\item Some derived rules - such as the rule of double negation elimination – can even be used in place of a rule of our original system, given a different system but with the same things being provable.
+	\item Some derived rules – such as the rule of double negation elimination – can even be used in place of a rule of our original system, given a different system but with the same things being provable.
 }
 
 \practiceproblems
