--- a/forallx-adl-tfl.tex
+++ b/forallx-adl-tfl.tex
@@ -145,7 +145,7 @@ Sentence \ref{not3} also contains the word `not'. And it is obviously equivalent
 
 % added Æ
 It is much more common in English to see negation appear as it does in \ref{not3}, with a `not' found somewhere within the sentence, than the more formal form in \ref{not2}. The form in \ref{not2} has the benefit that the sentence `Mary is in Barcelona' itself appears as a subsentence of \ref{not1} – so we can see how negation forms a new sentence by literally adding words to the old sentence. This is not so direct in \ref{not3}. But since \ref{not2} and \ref{not3} are near enough synonymous in meaning, we can treat them both as negations of \ref{not1}. (This issue is a bit tricky – see the discussion of examples \ref{not6} and \ref{not7}.)
-\factoidbox{ If a sentence can be can be paraphrased in English as `It is not the case that …', then it may be symbolised by $\enot\meta{A}$, where $\meta{A}$ is the \TFL\ sentence symbolising the sentence occurring at `…'.\footnote{See \ref{s:UseMention} for more detail on this notation.}}
+\factoidbox{If a sentence can be paraphrased by a sentence beginning  `It is not the case that …', then it may be symbolised by $\enot\meta{A}$, where $\meta{A}$ is the \TFL\ sentence symbolising the sentence occurring at `…'.\footnote{See \ref{s:UseMention} for more detail on this notation.}}
 It will help to offer a few more examples:
 	\begin{earg}
 		\item[\ex{not4}] The widget can be replaced.
