tweaks to conclusiveness and book design

--- a/forallx-adl-frontmatter.tex
+++ b/forallx-adl-frontmatter.tex
@@ -6,9 +6,10 @@
 \newpage \thispagestyle{empty} ~\\
 \newpage \thispagestyle{empty}
 ~\\[2cm]
-\noindent {\color{orange}\resizebox{!}{3em}{\forallx}}
-
-\par{\huge\texttt{Adelaide}}
+\noindent \makebox[6cm]{\begin{minipage}{7cm}
+	 \begin{flushright}
+	{\color{orange}\resizebox{!}{3em}{\forallx}}\par{\huge\textsc{Adelaide}}
+\end{flushright}\end{minipage}}
 
 \vfill
 
@@ -73,7 +74,7 @@ This book has been designed for use in conjunction with the University of Adelai
 I appreciate any comments or corrections: \href{mailto:antony.eagle@adelaide.edu.au}{\nolinkurl{antony.eagle@adelaide.edu.au}}.
 
  \thispagestyle{empty}
-{\begin{figure}
+\begin{figure}
 {\footnotesize
 \begin{tikzpicture}[sibling distance=10em]
  \matrix (depend)
