truth values cross ref

--- a/forallx-adl-what.tex
+++ b/forallx-adl-what.tex
@@ -202,7 +202,7 @@ The shared structure of these two arguments is something like this:
 	\item[] \textsf{It is not the case that} \meta{A}.
 	\item[So:] \meta{B}.
 \end{earg}
-Any argument with this sort of structure will be conclusive in virtue of structure, and hence valid. It does not matter, really, what sentences we put in place of `\meta{A}' and `\meta{B}'. (It matters a bit: you can't put a question or an exclamation and get a valid argument.) 
+Any argument with this structure will be conclusive in virtue of structure, and hence valid. It does not matter, really, what sentences we put in place of ‘\meta{A}’ and `\meta{B}'. (Within limits: you can't put a question or an exclamation and get a valid argument – see §\ref{s:truthvalues}.) 
 
 This highlights that valid arguments do not need to have true premises or even true conclusions. We can put a true sentence in place of \meta{A} and a false sentence in place of \meta{B}, and both premises and the conclusion will be false. The argument is still valid.
 
@@ -336,7 +336,7 @@ In each case: if so, give an example; if not, explain why not.
 
 In §\ref{s:Valid}, we introduced the idea of a valid argument. We will want to introduce some more ideas that are important in logic.
 
-\section{Truth values}
+\section{Truth values}\label{s:truthvalues}
 As we said in §\ref{s:Arguments}, arguments consist of premises and a conclusion, where the premises are supposed to support the conclusion. But if premises are supposed to state reasons, and conclusions are supposed to state claims, then both of them have to be the sort of sentence which can be used to \emph{say how things are}, truly or falsely. 
 
 So many kinds of English sentence cannot be used to express premises or conclusions of arguments. For example:
