restored side-by-side argument structure in §2

--- a/forallx-adl-what.tex
+++ b/forallx-adl-what.tex
@@ -179,22 +179,22 @@ So logicians do not study conclusive arguments in general, but rather concentrat
 
 The notion of the structure of a sentence, or an argument, is an intuitive one. I make the notion more precise in §\ref{s:ValidityInVirtueOfForm}. Relying on our intuitive grasp of the notion for now, however, we can see the  argument about ogres on the right has the same form as the argument on the left about oranges (slightly tweaked from our earlier presentation in §\ref{s:conclusiveargs} to make its structure clearer). It is easy to see that both of these arguments are conclusive and valid:
 
-%  \begin{minipage}{\textwidth}
-% 	\begin{minipage}{0.47\textwidth}
-% 		\begin{earg}
-% 	\item[] \textsf{Either} Oranges are fruits \textsf{or} oranges are musical instruments.
-% 	\item[] \textsf{It is not the case that} Oranges are fruits.
-% 	\item[So:] Oranges are musical instruments.
-% \end{earg} 
-% 	\end{minipage}\qquad
-% 	\begin{minipage}{0.47\textwidth}
-% 		\begin{earg}
-% 	\item[] \textsf{Either} Ogres are fearsome \textsf{or} ogres are mythical.
-% 	\item[] \textsf{It is not the case that} Ogres are fearsome.
-% 	\item[So:] Ogres are mythical.
-% \end{earg}
-% 	\end{minipage}
-% 	\end{minipage}
+ \begin{minipage}{\textwidth}
+	\begin{minipage}{0.47\textwidth}
+		\begin{earg}
+	\item[] \textsf{Either} Oranges are fruits \textsf{or} oranges are musical instruments.
+	\item[] \textsf{It is not the case that} Oranges are fruits.
+	\item[So:] Oranges are musical instruments.
+\end{earg} 
+	\end{minipage}\qquad
+	\begin{minipage}{0.47\textwidth}
+		\begin{earg}
+	\item[] \textsf{Either} Ogres are fearsome \textsf{or} ogres are mythical.
+	\item[] \textsf{It is not the case that} Ogres are fearsome.
+	\item[So:] Ogres are mythical.
+\end{earg}
+	\end{minipage}
+	\end{minipage}
 
 The shared structure of these two arguments is something like this:
 \begin{earg}
